# voicecast-platform

./: .env.example  .gitignore  01_PROJECT_SETUP.md  02_TEAM1_CORE_INFRASTRUCTURE.md  03_TEAM2_FRONTEND_UI.md  04_TEAM3_BACKEND_API.md  05_TEAM4_MOBILE_ADMIN.md  FRONTEND_IMPLEMENTATION.md  LICENSE  README.md  docker-compose.yml  package.json  tailwind.config.js
apps/admin/src/app/: layout.tsx
apps/admin/src/app/dashboard/: page.tsx
apps/admin/src/app/events/: page.tsx
apps/admin/src/app/users/: page.tsx
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src/hooks/: useAudio.ts
apps/desktop/src/screens/Discover/: DiscoverView.tsx
apps/desktop/src/screens/Onboarding/: OnboardingFlow.tsx
apps/desktop/src/screens/Profile/: ProfileView.tsx
apps/desktop/src/screens/Settings/: SettingsView.tsx
apps/mobile/ios/App/: Info.plist
apps/mobile/src-tauri/src/: mobile_audio.rs
apps/mobile/src/components/: MobileStreamControl.tsx
docs/: AUDIO_ENGINE.md  DEVELOPMENT.md
services/api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
services/api/prisma/: schema.prisma
services/api/src/: server.ts
services/api/src/config/: index.ts
services/api/src/services/: email.service.ts
services/api/src/types/: fastify.d.ts
services/api/src/utils/: error-handler.ts  logger.ts  validators.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/audio/: effects.rs  mod.rs
src-tauri/src/commands/: mod.rs
(+19 files in other folders)
