[package]
name = "voicecast-platform"
version = "0.1.0"
description = "High-quality audio streaming platform built with Tauri and Rust"
authors = ["VoiceCast Team"]
license = "MIT"
repository = "https://github.com/Yuta-Hachino/voicecast-platform"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio processing
cpal = "0.15"
opus = "0.3"
rodio = "0.17"
rubato = "0.14"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
once_cell = "1.19"

[features]
# By default, tauri runs in production mode
default = ["custom-protocol"]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
